--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "dependencies": {
     "@mailchimp/mailchimp_marketing": "^3.0.73",
     "axios": "^0.25.0",
+    "mongoose": "^6.2.2",
     "next": "^12.0.8",
+    "next-connect": "^0.12.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-loading-skeleton": "^3.0.2",
     "react-router-dom": "^6.2.1"
   },
   "devDependencies": {
